--- a/client/styles/components/_record.scss
+++ b/client/styles/components/_record.scss
@@ -388,6 +388,7 @@
 
 .sph-priority-item {
   padding-bottom: $grid-gutter;
+  margin-bottom: $grid-gutter;
   background-image: linear-gradient(to bottom, grey(0), grey(10));
 
   .o-container {
